# real-time-example-based-elastic-deformation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ReadMe.txt
Real-TIme Example-Based Elastic Deformation/: CGObject.cpp  CGObject.h  Cluster.cpp  Cluster.h  Config.cpp  Config.h  Constraint.cpp  Constraint.h  ConstraintTemp.h  Core.h  Drawer.cpp  Drawer.h  EventHandler.cpp  EventHandler.h  Gui.cpp  Gui.h  Particle.h  PhysParam.cpp  Scene.cpp  Scene.h  ShapeMatchingObject.cpp  ShapeMatchingObject.h  Sphere.cpp  Sphere.h  TetMesh.h  TriMesh.cpp  TriMesh.h  Vertex.h  Wall.cpp  Wall.h  main.cpp  tinyxml.cpp
Real-Time Example-Based Elastic Deformation.xcodeproj/: project.pbxproj
Real-Time_Example-Based_Elastic_Deformation/: TriMesh.fs  TriMesh.vs  libAntTweakBar.dylib
Real-Time_Example-Based_Elastic_Deformation.xcodeproj/: project.pbxproj
Real-Time_Example-Based_Elastic_Deformation/Real-Time_Example-Based_Elastic_Deformation/: Cluster.h  Core.h  Drawer.cpp  Drawer.h  Embed.h  EventHandler.cpp  Matrix2x2.h  Matrix4x4.h  ShapeMatchingObject.cpp  ShapeMatchingObject.h  Sphere.cpp  TetMesh.cpp  TriMesh.h  Vector.h  Vertex.h  gl.h  jacobi.h  main.cpp
Real-Time_Example-Based_Elastic_Deformation/Real-Time_Example-Based_Elastic_Deformation.xcodeproj/: project.pbxproj
Real-Time_Example-Based_Elastic_Deformation/Real-Time_Example-Based_Elastic_Deformation.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Real-Time_Example-Based_Elastic_Deformation/Real-Time_Example-Based_Elastic_Deformation.xcodeproj/project.xcworkspace/xcuserdata/koyama.xcuserdatad/: UserInterfaceState.xcuserstate
Real-Time_Example-Based_Elastic_Deformation/data/: demo.xml
Real-Time_Example-Based_Elastic_Deformation/data/box/: box_shear.node  box_shrink.node  box_twist.node
Real-Time_Example-Based_Elastic_Deformation/include/KLIB/: MatrixVL.cpp  MatrixVL.h  VectorVL.h
Real-Time_Example-Based_Elastic_Deformation/include/OpenMesh/Core/Geometry/: VectorT_inc.hh
Real-Time_Example-Based_Elastic_Deformation/include/OpenMesh/Core/IO/: IOManager.cc  SR_rbo.hh
Real-Time_Example-Based_Elastic_Deformation/include/OpenMesh/Core/IO/reader/: OBJReader.cc  OFFReader.cc  PLYReader.cc
Real-Time_Example-Based_Elastic_Deformation/include/OpenMesh/Core/IO/writer/: OBJWriter.cc  OFFWriter.cc  OMWriter.cc  PLYWriter.cc
Real-Time_Example-Based_Elastic_Deformation/include/OpenMesh/Core/Mesh/: ArrayKernel.cc  IteratorsT.hh  PolyMeshT.hh  Traits.hh  TriConnectivity.hh  TriMeshT.cc  TriMeshT.hh
Real-Time_Example-Based_Elastic_Deformation/include/OpenMesh/Core/System/: omstream.cc  omstream.hh
Real-Time_Example-Based_Elastic_Deformation/include/OpenMesh/Core/Utils/: Endian.cc
Real-Time_Example-Based_Elastic_Deformation/lib/: libOpenMeshCore.dylib
Real-Time_Example-Based_Elastic_Deformation/src/: Embed.cpp  Matrix.h  Matrix1x1.h  Matrix3x3.h  PhysParam.h  ShaderUtil.cpp  ShapeMatchingObject.cpp  ShapeMatchingObject.h  TetMesh.cpp  TriMesh.cpp  TriMesh.h  Util.h  Vector1.h  Vector2.h  Vector4.h  Wall.cpp  params.h
data/box/: box.ele  box.node  box_bend.node
include/KLIB/: DrawUtil.h  GLUtil.cpp  GLUtil.h  LapackWrapper.h  Matrix.h  MatrixVL.h  Util.h  Vector.h
include/KLIB/private/: Matrix1x1.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Vector1.h  Vector2.h  Vector3.h  Vector4.h
include/OpenMesh/Core/Geometry/: QuadricT.hh
include/OpenMesh/Core/IO/: BinaryHelper.cc  OMFormat.cc  OMFormat.hh
include/OpenMesh/Core/IO/reader/: BaseReader.cc  OMReader.cc  STLReader.cc
include/OpenMesh/Core/IO/writer/: BaseWriter.cc  STLWriter.cc
include/OpenMesh/Core/Mesh/: AttribKernelT.hh  BaseKernel.cc  PolyConnectivity.cc  PolyConnectivity.hh  PolyMeshT.cc  TriConnectivity.cc
include/OpenMesh/Core/Utils/: BaseProperty.cc
shaders/: TriMesh.fs  Wall.fs  Wall.vs  WallShadow.fs  WallShadow.vs
src/: CGObject.cpp  CGObject.h  Clock.h  Cluster.cpp  Cluster.h  Config.cpp  Config.h  Constraint.cpp  Constraint.h  ConstraintTemp.h  Core.cpp  Core.h  Drawer.cpp  Drawer.h  Embed.cpp  Embed.h  EventHandler.cpp  EventHandler.h  GLUtil.h  Gui.cpp  Gui.h  Matrix.h  Matrix1x1.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Particle.cpp  Particle.h  PhysParam.cpp  PhysParam.h  Scene.cpp  Scene.h  ShaderUtil.cpp  ShaderUtil.h  ShapeMatchingObject.cpp  ShapeMatchingObject.h  Sphere.cpp  Sphere.h  TetMesh.cpp  TetMesh.h  (+18 more)
